# pixade

./: .gitignore  CHANGELOG.md  Cargo.toml  flake.nix
assets/images/: space-invaders-red.xcf
src/: game.rs  main.rs
