[package]
name = "pixel_warrior"
version = "0.1.0"
authors = ["milan <milan@milan.wtf>"]
edition = "2021"
description = "A game about building weapons with pixels"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = ["wayland"] }
